# dotfiles

./: .gitignore  Readme.md  artichoke.zsh-theme  clang-format  clangd  gcc-trunk-install.sh  llvm-trunk-install.sh  nvim-install.sh  setup.sh  tmux.conf  zshrc
arti/: env.sh  install.sh
arti/generator/config/: config  config.toml
arti/generator/config/aoc-day-template/: vars.toml
arti/generator/config/aoc-day-template/{{ name }}/src/: p1.hpp  p2.hpp  solution.cpp  test.cpp
arti/generator/config/aoc-year-template/: vars.toml
arti/generator/config/aoc-year-template/{{ name }}/: .clang-format  .clangd  CMakeLists.txt  conanfile.txt
arti/generator/config/aoc-year-template/{{ name }}/.arti/ws/: launch.lua  variables.lua
arti/generator/config/cmake-mult-exec-template/: vars.toml
arti/generator/config/cmake-mult-exec-template/{{ name }}/: CMakeLists.txt  conanfile.txt  run
arti/generator/config/cmake-mult-exec-template/{{ name }}/.automaton/: config.json  launch.json  tasks.json  variables.json
arti/generator/config/cmake-project-template/: vars.toml
arti/generator/config/cmake-project-template/{{ project_name }}/: .clangd  CMakeLists.txt  main.cpp
arti/generator/config/cmake-project-template/{{ project_name }}/configured_files/: config.hpp.in
arti/generator/config/conanfile-template/: conanfile.txt  vars.toml
arti/generator/config/cp-contest-template/: vars.toml
arti/generator/config/cp-contest-template/{{ name }}/: .clangd  CMakeLists.txt
arti/generator/config/cp-contest-template/{{ name }}/.automaton/: config.json  launch.json  state.json  tasks.json  variables.json
arti/generator/config/cp-problem-template/: vars.toml  {{ name }}.cpp
arti/generator/config/cp-template/: vars.toml
arti/generator/config/cp-template/{{ name }}/: solution.cpp
arti/generator/scripts/: install.sh
arti/nvim/: nvim
arti/nvim/templates/cmake/: config.lua  launch.lua  tasks.lua  variables.lua
arti/nvim/templates/cp-contest/: config.lua  launch.lua  tasks.lua  variables.lua
arti/sub/scripts/: install.sh
conan-profiles/: clang-14  clang-15  gcc-11  gcc-12  gcc-13
nvim/: coc-settings.json  init.lua
nvim/after/plugin/: automaton.lua  bufferline.lua  coc.lua  colorizer.lua  colors.lua  indent.lua  lsp.lua  lualine.lua  nerdcommenter.lua  nerdtree.lua  nightfox.lua  noice.lua  nvimtree.lua  startup.lua  telescope.lua  treesitter.lua  zenmode.lua
nvim/lua/alcachofa/: floaterm.lua  init.lua  lazy.lua  mappings.lua  packer.lua
nvim/lua/alcachofa/colorschemes/: gruvbox.lua  kanagawa.lua  monokai-pro.lua  nightfox.lua
